# Axun_Nodes

./: .clinerules  .cursorrules  .gitignore  CHANGELOG.md  README.md  __init__.py  __init__.py2  pyproject.toml  requirements.txt
.cursor/rules/: cursorrules.mdc
config/: AIAssistant_config.json  AIAssistant_presets.json  axun_nodes.json  dir_picker.json  translator.json
icon/: emoji_catalog.md
nodes/AIAssistant/: AIAssistant.py  __init__.py.bak  image_selector.py  llm_node.py  number_generator.py  preset_node.py  story_extractor.py  text_cache.py  text_merger.py  text_processor.py  text_selector.py
nodes/AIAssistant/utils/: __init__.py  api_handler.py  config_manager.py  image_utils.py
nodes/Lotus/: __init__.py.bak  lotus_nodes.py
nodes/Qtools/: __init__.py.bak  dir_opener.py  dir_picker.py  path_processor.py  picked_dirs.json  queue_trigger.py  work_mode.py
nodes/Supir/: __init__.py.bak  nodes_v2.py  supir_conditioner.py  supir_decode.py  supir_encode.py  supir_first_stage.py  supir_model_loader.py  supir_sample.py
nodes/Translator/: __init__.py.bak  auto_translator_box.py  translator_node.py
nodes/Translator/utils/: __init__.py  (+1 more)
utils/: api_handler.py  config_utils.py  image_utils.py  route_handlers.py  system_utils.py.bak  utils.py.bak  web_utils.py
web/: AIAssistant.js  AIAssistant_preset.js  AIAssistant_preset.js.bak  auto_translator_box.js  dir_opener.js  llm.js  number_generator.js  qtools.js  story_extractor.js  text_cache.js  text_merger.js  text_processor.js  translator.js
web/js/: number_generator.js  translator.js  web.js
