[project]
name = "axun_nodes"
version = "1.05"
description = "ComfyUI plugin providing AI assistant, path processing, queue trigger, SUPIR super-resolution and translation functionality"
authors = [
    {name = "Axun", email = "axun@example.com"},
]
dependencies = [
    "aiohttp",
    "requests",
    "pillow",
    "numpy",
    "torch",
    "transformers",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/axun/axun_nodes"
Repository = "https://github.com/axun/axun_nodes.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 